--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "notetaker",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "pnpm@7.5.1",
   "scripts": {
     "build": "next build",
     "dev": "next dev",
@@ -53,5 +54,7 @@
   },
   "ct3aMetadata": {
     "initVersion": "7.5.1"
+    
   }
+  
 }
